test/sema/invalid-arguments-to-function-pointer.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(void(int, int) a) {
    // CHECK: [[@LINE+1]]:11: error: invalid argument #2 type 'bool' to 'a', expected 'int'
    a(42, false);
}
